[package]
name = "simple_http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
jsonwebtoken = "9"
bcrypt = "0.15"

uuid = { version = "1", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
axum-extra = { version = "0.9", features = ["typed-header"] }


[[bin]]
name = "basic_http_server"
path = "src/basic http server/basic_http_server.rs"

[[bin]]
name ="todo_api"
path = "src/todo_API_CRUD/todo_api.rs"

